--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ttp-pis-assignment-0-fundamentals-of-js",
+  "name": "ttp-pis-assignment-0-fundamentals-of",
   "version": "1.0.0",
   "description": "This is a README file. Initial commit.",
   "main": "index.js",
@@ -30,14 +30,14 @@
     "type": "git",
     "url": "git+https://github.com/ajLapid718/TTP-PIS-Summer-2020-Assignment-0-Fundamentals-Of-JavaScript.git"
   },
-  "author": "",
+  "author": "hf",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ajLapid718/TTP-PIS-Summer-2020-Assignment-0-Fundamentals-Of-JavaScript/issues"
   },
   "homepage": "https://github.com/ajLapid718/TTP-PIS-Summer-2020-Assignment-0-Fundamentals-Of-JavaScript#readme",
   "dependencies": {
-    "chai": "^4.2.0",
+    "chai": "^4.3.7",
     "faker": "^4.1.0",
     "mocha": "^7.1.2",
     "moment": "^2.25.1",
